--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gsap": "^3.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
+    "sass": "^1.79.4",
+    "swiper": "^11.1.14",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
